# RDC_taxvantage

./: .env.example  .gitignore  Makefile  QUICKSTART.md  README.md  pyproject.toml  run_meridian.py  run_neuralaxis.py  run_pipeline.py
examples/: Dummy_RD_Tax_Credit_Responses.docx  Integrated_RD_Tax_Credit_Questionnaire.docx  Integrated_RD_Tax_Credit_Questionnaire_v2.docx  agent3_blueprint.docx  answers.json  clearpath_robotics_2023_2024.json  comprehensive_study.csv  meridian_robotics_answers.csv  novapluse_new.json  novapulse_multiyear.json  novapulse_refined.json  quantumbio_answers.csv  sample.csv  sample_study.json  single_file_compact.csv  study_from_csv.json  user_provided_long_format.csv
examples/csv_data/: contractors.csv  employees.csv  expenses.csv  projects.csv  study_metadata.csv
scripts/: csv_to_json.py  validate_json.py
src/: __init__.py  __main__.py
src/agents/: __init__.py  compliance.py  computation.py  csv_ingestion.py  framework.py  intake_agent.py  json_ingestion.py  multi_year_json_ingestion.py  narrative.py  questionnaire_ingestion.py  render_agent.py
src/compute/: __init__.py  calculations.py  comprehensive.py
src/mappers/: __init__.py  questionnaire_answers_builder.py  questionnaire_to_study.py
src/pipeline/: __init__.py  coordinator.py
src/render/: __init__.py  canvas.py  comprehensive_builder.py  comprehensive_sections.py  project_report_builder.py  sections.py  styles.py  tables.py  title_page.py
tests/: test_comprehensive_pdf.py  test_computations.py  test_csv_ingestion.py  test_csv_parsing.py  test_schema.py
(+7 files in other folders)
