[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "rnd-report"
version = "1.0.0"
description = "Production-grade R&D Tax Credit Report Generator with OpenAI Agents"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "openai>=1.12.0",
    "pydantic>=2.6.0",
    "reportlab>=4.0.0",
    "Pillow>=10.0.0",
    "pandas>=2.2.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=4.1.0",
    "black>=24.0.0",
    "ruff>=0.2.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.ruff]
line-length = 100
target-version = "py311"
